<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:gravity="center"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/create_new_topic" />


    <EditText
        android:backgroundTint="@color/colorPrimary"
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/title"
        android:inputType="text"
        android:maxLength="24"
        android:maxLines="1"
        android:padding="16dp" />

</LinearLayout>