<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SignInActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:src="@mipmap/ic_launcher" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLength="64"
            android:maxLines="1"
            android:padding="16dp" />

        <EditText
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="64"
            android:maxLines="1"
            android:padding="16dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">

            <EditText
                android:backgroundTint="@color/colorPrimary"
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/pass"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="16dp"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/cb_show_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">

            <EditText
                android:backgroundTint="@color/colorPrimary"
                android:id="@+id/et_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm_pass"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="16dp"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/cb_show_confirm_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center" />
        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_sign_up"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark" />
    </FrameLayout>

    <Button
        android:id="@+id/bt_login"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:text="@string/already_a_member"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/primary_text_light" />

</LinearLayout>